# Chess

./: CMakeLists.txt  README.md  assets.rc  main.cpp
engine/: library.cpp  library.h
game/: ChessAnimation.cpp  ChessAnimation.h  ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  GameOverPopup.cpp  GameOverPopup.h  PromotionPopup.cpp  PromotionPopup.h  SingleplayerController.cpp  SingleplayerController.h  StockfishEngine.cpp  StockfishEngine.h
